--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -8,7 +8,7 @@ h4{
 .home-section{
 	width: 100%;
 	height: 95vh;
-	background-image:url(https://cdn.pixabay.com/photo/2016/10/11/21/43/banner-1732847_960_720.jpg);
+	background-image:url(img/back.jpg);
 	background-blend-mode: multiply;
 	background-size: cover;
 }
@@ -65,9 +65,6 @@ h4{
 	}
 }
 @media  (max-width: 544px){
-	.home-section{
-		background-image: url(https://cdn.pixabay.com/photo/2016/10/11/21/43/banner-1732847_960_720.jpg);
-	}
 	.home-section .home-section-caption{
 	position: absolute;
 	width: 100%;
