--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -106,7 +106,7 @@ h4{
 	letter-spacing: 2px;
 }
 .line2{
-	width:20%;
+	width:30%;
 	height:1px;
 	border: 1px dotted rgb(124, 124, 124);
 	margin: 3px auto;
@@ -122,7 +122,7 @@ h4{
 		font-size: 1.2em;
 	}
 	.line2{
-		width:50%;
+		width:60%;
 	}
 	.quote{
 		font-size: 1.2em;
@@ -143,4 +143,21 @@ h4{
 	bottom: 10px;
 	right: 20px;
 	color: rgb(1, 56, 139);
+}
+
+/*Social Networks */
+.linkedin{
+	color: rgb(0, 217, 255);
+}
+.github{
+	color: rgb(212, 212, 212);
+}
+.codepen{
+	color:#000;
+}
+.medium{
+
+}
+.email{
+	color: rgb(226, 53, 53);
 }
