--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -139,7 +139,7 @@ h4{
 /* bittom section */
 .contacts-section{
 	widows: 100%;
-	height: 250px;
+	height: 350px;
 	background-color:  rgb(5, 11, 12);
 }
 
@@ -148,7 +148,7 @@ h4{
 	position: fixed;
 	bottom: 10px;
 	right: 20px;
-	color: rgb(1, 56, 139);
+	color: rgb(56, 0, 35);
 }
 
 /*Social Networks */
@@ -156,19 +156,29 @@ h4{
 .codepen,
 .github,
 .medium,
-.email{
+.facebook{
 	color: rgb(165, 165, 165);
+	text-shadow: 4px 4px 10px rgb(0, 0, 0), 6px 6px 3px rgb(0, 0, 0);
+	transition: 0.5s;
+}
+
+.linkedin:hover,
+.codepen:hover,
+.github:hover,
+.medium:hover,
+.facebook:hover{
+	color: rgb(46, 46, 46);
+	text-shadow: 1px 1px 1px #000, 1px 1px 1px #000;
+	transition: 0.5s;
 }
 
 .mobile{
 	color: rgb(149, 173, 133);
 	font-weight: 500;
+	text-shadow: 4px 4px 5px #000, 6px 6px 6px #000;
 }
 .mobile:hover{
 	text-decoration: none;
 	color: antiquewhite;
-}
-.location{
-	color: rgb(206, 206, 206);
-	font-weight: 500;
+	
 }
