--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -49,8 +49,9 @@ h4{
 .front-end{
 	color: #fff;
 	font-size: 2em;
-	letter-spacing: 7px;
+	letter-spacing: 3px;
 	text-transform: uppercase;
+	font-family: 'Noto Serif', serif;
 }
 @media (max-width: 768px){
 	.home-section .home-section-caption{
@@ -66,6 +67,7 @@ h4{
 		width: 75%;
 	}
 	.front-end{
+		letter-spacing: 4px;
 		margin-top: 5px;
 		font-size: 2em;
 	}
@@ -84,6 +86,7 @@ h4{
 		width: 95%;
 	}
 	.front-end{
+		letter-spacing: 5px;
 		margin-top: 4px;
 		font-size: 1em;
 	}
