--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -3,7 +3,8 @@
 }
 
 
-h4{
+h4,
+h5{
 	color: rgb(248, 215, 215)
 
 }
@@ -131,7 +132,7 @@ h4{
 		font-size: 1.2em;
 	}
 	.line2{
-		width:60%;
+		width:90%;
 	}
 	.quote{
 		font-size: 1.2em;
