--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -1,14 +1,6 @@
 .wow{
     visibility: hidden;
 }
-
-
-h4{
-	color: rgb(248, 215, 215)
-
-}
-
-
 .home-section{
 	width: 100%;
 	height: 95vh;
@@ -17,7 +9,7 @@ h4{
 	background-size: cover;
 }
 .home-section ,.home-section-caption p{
-	color: rgb(8, 31, 29) !important;
+	color: rgb(0, 126, 115) !important;
 }
 .home-section .home-section-caption{
 	position: absolute;
@@ -31,23 +23,24 @@ h4{
 .name{
 	font-size: 3.4em;
 	text-align: center;
-	color: #fff;
+	color: rgb(0, 85, 71);
 	font-weight: 500;
 	margin-bottom: 0;
+	font-family: 'Noto Serif', serif;
 }
 .line{
 	height: 2px;
 	width: 35%;
 	border: 3px dashed;
-	border-bottom-color: rgb(236, 31, 255);
-	border-top-color: rgb(130, 255, 72);
+	border-bottom-color: rgb(220, 45, 243) ;
+	border-top-color:aqua;
 	margin: 0 auto;
 	border-radius: 100%;
 
 }
 
 .front-end{
-	color: #fff;
+	color: rgb(72, 255, 224);
 	font-size: 2em;
 	letter-spacing: 3px;
 	text-transform: uppercase;
@@ -98,11 +91,11 @@ h4{
 	background-color: rgb(5, 11, 12);
 	width: 100%;
 	height: auto;
-	color: rgb(112, 112, 112);
+	color: aqua;
 }
 
 .about-desc p{
-	color: rgb(114, 114, 114);
+	color: aqua;
 	letter-spacing: 1px; 
 	font-size: 1.3em;
 	word-spacing: 3px;
@@ -117,7 +110,7 @@ h4{
 .line2{
 	width:30%;
 	height:1px;
-	border: 1px dotted rgb(124, 124, 124);
+	border: 1px dotted rgb(93, 181, 207);
 	margin: 3px auto;
 	border-radius: 100%;
 }
@@ -131,7 +124,8 @@ h4{
 		font-size: 1.2em;
 	}
 	.line2{
-		width:60%;
+		width:85%;
+		margin: 15px;
 	}
 	.quote{
 		font-size: 1.2em;
@@ -146,12 +140,23 @@ h4{
 	background-color:  rgb(5, 11, 12);
 }
 
+.footer-section{
+	background-color: rgb(5, 11, 12);
+	color: rgb(73, 255, 234);
+}
+@media (max-width: 544px){
+	.footer-line{
+		width: 100%;
+		height: 1px;
+		background-color: rgb(146, 255, 255);
+	}
+}
 
 .message{
 	position: fixed;
 	bottom: 10px;
 	right: 20px;
-	color: rgb(56, 0, 35);
+	color: aqua;
 }
 
 /*Social Networks */
@@ -160,7 +165,7 @@ h4{
 .github,
 .medium,
 .facebook{
-	color: rgb(165, 165, 165);
+	color: aquamarine;
 	text-shadow: 4px 4px 10px rgb(0, 0, 0), 6px 6px 3px rgb(0, 0, 0);
 	transition: 0.5s;
 }
@@ -170,18 +175,22 @@ h4{
 .github:hover,
 .medium:hover,
 .facebook:hover{
-	color: rgb(46, 46, 46);
+	color: aqua;
 	text-shadow: 1px 1px 1px #000, 1px 1px 1px #000;
 	transition: 0.5s;
 }
 
 .mobile{
-	color: rgb(149, 173, 133);
+	color: rgb(0, 236, 146);
 	font-weight: 500;
 	text-shadow: 4px 4px 5px #000, 6px 6px 6px #000;
 }
 .mobile:hover{
 	text-decoration: none;
-	color: antiquewhite;
+	color: rgba(0, 107, 84, 0.404);
 	
+}
+h5{
+	color: rgb(136, 255, 255);
+
 }
