--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -1,18 +1,11 @@
 .wow{
     visibility: hidden;
 }
-<<<<<<< HEAD
-=======
 
-
-h4,
-h5{
-	color: rgb(248, 215, 215)
+h4{
+	color: rgb(1, 133, 133)
 
 }
-
-
->>>>>>> 6ffd415615b616b9d0b303253f7bc6854abcf460
 .home-section{
 	width: 100%;
 	height: 95vh;
@@ -136,12 +129,10 @@ h5{
 		font-size: 1.2em;
 	}
 	.line2{
-<<<<<<< HEAD
 		width:85%;
 		margin: 15px;
-=======
 		width:90%;
->>>>>>> 6ffd415615b616b9d0b303253f7bc6854abcf460
+
 	}
 	.quote{
 		font-size: 1.2em;
@@ -152,7 +143,7 @@ h5{
 /* bittom section */
 .contacts-section{
 	widows: 100%;
-	height: 350px;
+	height: auto;
 	background-color:  rgb(5, 11, 12);
 }
 
@@ -206,10 +197,9 @@ h5{
 	color: rgba(0, 107, 84, 0.404);
 	
 }
-<<<<<<< HEAD
+
 h5{
 	color: rgb(136, 255, 255);
 
 }
-=======
->>>>>>> 6ffd415615b616b9d0b303253f7bc6854abcf460
+
