--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -167,7 +167,7 @@
 }
 
 /*Social Networks */
-.linkedin,
+.free-code-camp,
 .codepen,
 .github,
 .medium,
@@ -177,7 +177,7 @@
 	transition: 0.5s;
 }
 
-.linkedin:hover,
+.free-code-camp:hover,
 .codepen:hover,
 .github:hover,
 .medium:hover,
