--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -44,8 +44,8 @@
 	height: 2px;
 	width: 40%;
 	border: 3px dotted;
-	border-bottom-color: rgb(0, 131, 131) ;
-	border-top-color:aqua;
+	border-bottom-color: rgb(62, 255, 72) ;
+	border-top-color:rgb(234, 0, 255);
 	margin: 0 auto;
 	border-radius: 100%;
 
@@ -100,13 +100,13 @@
 	height: auto;
 }
 .about-section h4{
-	color: aqua;
+	color: rgb(211, 211, 211);
 }
 .about-section h5{
-	color: rgb(0, 90, 105);
+	color: rgb(168, 168, 168);
 }
 .about-section p{
-	color: rgb(0, 77, 77);
+	color: rgb(160, 160, 160);
 	letter-spacing: 1px; 
 	font-size: 1.3em;
 	text-align: justify;
@@ -117,7 +117,7 @@
 .line2{
 	width:30%;
 	height:1px;
-	border: 1px dotted rgb(108, 187, 211);
+	border: 1px dotted rgb(147, 230, 255);
 	margin: 3px auto;
 	border-radius: 100%;
 }
@@ -156,14 +156,15 @@
 
 .footer-line{
 	width: 100%;
-	height: 2px;
-	background-color: rgb(146, 255, 255);
+	height: 1px;
+	background-color: rgb(185, 255, 255);
 }
 .message{
 	position: fixed;
-	bottom: 10px;
+	bottom: 20px;
 	right: 20px;
 	color: aqua;
+	cursor: pointer;
 }
 
 /*Social Networks */
@@ -172,7 +173,7 @@
 .github,
 .medium,
 .facebook{
-	color: aquamarine;
+	color: rgb(7, 144, 179);
 	text-shadow: 4px 4px 10px rgb(0, 0, 0), 6px 6px 3px rgb(0, 0, 0);
 	transition: 0.5s;
 }
@@ -188,14 +189,15 @@
 }
 
 .location{
-	color: rgb(0, 236, 146);
+	color: rgb(36, 155, 109);
 	font-weight: 500;
 	text-shadow: 4px 4px 5px #000, 6px 6px 6px #000;
+	transition: 0.5s;
 }
 .location:hover{
 	text-decoration: none;
-	color: rgba(0, 107, 84, 0.404);
-	
+	color: rgb(122, 238, 213);
+	transition: 0.5s;
 }
 
 
