--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -1,12 +1,28 @@
 .wow{
     visibility: hidden;
 }
-
+.text-aqua{
+	color: aqua !important;
+}
+.text-red{
+	color: rgb(158, 0, 0);
+	font-weight: 500;
+}
+.btn-outline-aqua{
+	background-color: transparent;
+	color: aqua;
+	border: 1px solid aquamarine;
+}
+.btn-outline-aqua:hover{
+	background-color: aqua;
+	color: rgb(0, 0, 0);
+	font-weight: 400;
+}
 /* HOME SECTION */
 .home-section{
 	width: 100%;
 	height: 95vh;
-	background-image:url(https://github.com/arrbxr/portfolio/blob/master/img/back.jpg?raw=true);
+	background-image:url(img/back.jpg);
 	background-blend-mode: multiply;
 	background-size: cover;
 }
@@ -200,4 +216,36 @@
 	transition: 0.5s;
 }
 
-
+/* modal style */
+.modal{
+	margin-top: 5%;
+	background-color: transparent !important;
+}
+@media (max-width: 544px){
+	.modal{
+		margin-top: 20%;
+	}
+}
+.modal-dialog{
+	background-color: transparent !important;
+}
+.modal-content{
+	color: rgb(209, 255, 240);
+	background-color: rgba(0, 95, 112, 0.753) !important;
+	border: 1px solid rgb(0, 179, 185);
+	box-shadow: 0px 0px 20px rgb(255, 255, 255), 0px 0px 1px rgb(6, 226, 255);
+}
+.modal-header .close{
+	color: #ffff !important;
+}
+.modal-body{
+	background: transparent;
+}
+.modal-body .form-group input,
+.modal-body .form-group textarea,
+.input-group-text{
+	background-color: rgba(0, 0, 0, 0.562) !important;
+}
+.input-group-text{
+	color: aqua;
+}
