--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -18,11 +18,12 @@
 	color: rgb(0, 0, 0);
 	font-weight: 400;
 }
+
 /* HOME SECTION */
 .home-section{
 	width: 100%;
 	height: 95vh;
-	background-image:url(img/back.jpg);
+	background-image:url(https://github.com/arrbxr/portfolio/blob/master/img/back.jpg?raw=true);
 	background-blend-mode: multiply;
 	background-size: cover;
 }
