--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -246,7 +246,7 @@
 	background-color: rgba(0, 0, 0, 0.562) !important;
 }
 .input-group-text{
-	background-color: aqua;
+	background-color: rgba(0, 255, 255, 0.664);
 	color: rgb(0, 0, 0);
 	
 }
