--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -19,12 +19,30 @@
 	font-weight: 400;
 }
 
+/* Custom Navbar */
+.custom-navbar{
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.705);
+	z-index: 1000 !important;
+}
+.navbar-brand{
+	color: aqua;
+
+}
+.navbar-toggler-icon{
+	color: red !important;
+}
+.navbar-nav-custom a{
+	color: aqua;
+}
 /* HOME SECTION */
 .home-section{
 	width: 100%;
-	height: 95vh;
+	height: 100vh;
 	background-image:url(https://github.com/arrbxr/portfolio/blob/master/img/back.jpg?raw=true);
-	background-blend-mode: multiply;
 	background-size: cover;
 }
 
@@ -234,6 +252,7 @@
 	color: rgb(209, 255, 240);
 	background-color: rgba(0, 95, 112, 0.753) !important;
 	border: 1px solid rgb(0, 179, 185);
+	z-index: 1100 !important;
 }
 .modal-header .close{
 	color: #ffff !important;
