--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -30,7 +30,9 @@
 }
 .navbar-brand{
 	color: aqua;
-
+}
+.navbar-brand:hover{
+	color: aquamarine;
 }
 .navbar-toggler-icon{
 	color: red !important;
