--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -136,14 +136,13 @@
 	width: 100%;
 	height: auto;
 }
-.about-section h4{
-	color: rgb(7, 144, 179);
-}
+.about-section h4,
 .about-section h5{
-	color: rgb(4, 130, 161);
+	color: rgb(114, 114, 114);
 }
+
 .about-section p{
-	color:rgb(97, 144, 179);
+	color: rgb(112, 112, 112);
 	letter-spacing: 1px; 
 	font-size: 1.3em;
 	text-align: justify;
@@ -154,7 +153,7 @@
 .line2{
 	width:30%;
 	height:1px;
-	border: 1px dotted rgb(147, 230, 255);
+	border: 1px dotted rgba(255, 255, 255, 0.562);
 	margin: 3px auto;
 	border-radius: 100%;
 }
@@ -188,7 +187,7 @@
 
 .footer-section{
 	background-color: rgb(5, 11, 12);
-	color: rgb(73, 255, 234);
+	color: rgb(114, 114, 114);
 }
 
 .footer-line{
@@ -200,7 +199,7 @@
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
-	color: aqua;
+	color: rgb(133, 126, 138);
 	cursor: pointer;
 }
 
@@ -210,7 +209,7 @@
 .github,
 .medium,
 .facebook{
-	color: aquamarine;
+	color: rgb(102, 102, 102);
 	text-shadow: 4px 4px 10px rgb(0, 0, 0), 6px 6px 3px rgb(0, 0, 0);
 	transition: 0.5s;
 }
@@ -220,20 +219,20 @@
 .github:hover,
 .medium:hover,
 .facebook:hover{
-	color: rgb(97, 223, 255);
+	color: rgb(41, 41, 41);
 	text-shadow: 1px 1px 1px #000, 1px 1px 1px #000;
 	transition: 0.5s;
 }
 
 .location{
-	color: aquamarine;
+	color: rgb(94, 94, 94);
 	font-weight: 500;
 	text-shadow: 4px 4px 5px #000, 6px 6px 6px #000;
 	transition: 0.5s;
 }
 .location:hover{
 	text-decoration: none;
-	color: rgb(122, 238, 213);
+	color: rgb(136, 136, 136);
 	transition: 0.5s;
 }
 
@@ -251,7 +250,7 @@
 	background-color: transparent !important;
 }
 .modal-content{
-	color: rgb(209, 255, 240);
+	color: rgb(155, 255, 255);
 	background-color: rgba(0, 95, 112, 0.753) !important;
 	border: 1px solid rgb(0, 179, 185);
 	z-index: 1100 !important;
