--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -19,6 +19,7 @@
 	font-weight: 400;
 }
 
+
 /* Custom Navbar */
 .custom-navbar{
 	position: fixed;
@@ -40,6 +41,23 @@
 .navbar-nav-custom a{
 	color: aqua;
 }
+
+/* Progress Bar */
+.progress-container{
+	width:100%;
+	height: 2px;
+	background: rgba(8, 8, 8, 0.678);
+	position: fixed;
+	top: 56px;
+	right: 0;
+	left: 0;
+}
+.progress-bar{
+	height: 2px;
+	background-color: aqua;
+	width: 0%;
+}
+
 /* HOME SECTION */
 .home-section{
 	width: 100%;
