--- a/css/abhishekrajravi.css
+++ b/css/abhishekrajravi.css
@@ -206,13 +206,13 @@
 
 .footer-section{
 	background-color: rgb(5, 11, 12);
-	color: rgb(114, 114, 114);
+	color: rgb(119, 119, 119);
 }
 
 .footer-line{
 	width: 100%;
 	height: 1px;
-	background-color: rgb(185, 255, 255);
+	background-color: rgb(58, 58, 58);
 }
 .message{
 	position: fixed;
@@ -280,12 +280,12 @@
 .modal-body{
 	background: transparent;
 }
-.modal-body .form-group input,
-.modal-body .form-group textarea{
-	background-color: rgba(0, 0, 0, 0.562) !important;
+input[type=text],
+input[type=email], 
+textarea{
+	background-color: transparent !important;
 }
 .input-group-text{
 	background-color: rgba(0, 255, 255, 0.664);
 	color: rgb(0, 0, 0);
-	
 }
